Bug 206587 - x86/mce: Do not log spurious corrected mce errors
Summary: x86/mce: Do not log spurious corrected mce errors
Status: RESOLVED CODE_FIX
Alias: None
Product: Platform Specific/Hardware
Classification: Unclassified
Component: x86-64 (show other bugs)
Hardware: x86-64 Linux
: P1 normal
Assignee: platform_x86_64@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-18 16:22 UTC by Prarit Bhargava
Modified: 2022-01-06 23:28 UTC (History)
1 user (show)

See Also:
Kernel Version: 5.6-rc2
Subsystem:
Regression: No
Bisected commit-id:


Attachments
4th gen core family mobile specificatoin update (1.24 MB, application/pdf)
2020-02-18 16:26 UTC, Prarit Bhargava
Details
$th gen core family desktop specification update (1.16 MB, application/pdf)
2020-02-18 16:27 UTC, Prarit Bhargava
Details
5th gen core family spec update (1.36 MB, application/pdf)
2020-02-18 16:27 UTC, Prarit Bhargava
Details
xeon e3 1200v3 spec update (695.13 KB, application/pdf)
2020-02-18 16:28 UTC, Prarit Bhargava
Details

Description Prarit Bhargava 2020-02-18 16:22:19 UTC
A user has reported that they are seeing spurious corrected errors on their hardware.
    
Intel Errata HSD131, HSM142, HSW131, and BDM48 report that
"spurious corrected errors may be logged in the IA32_MC0_STATUS register
with the valid field (bit 63) set, the uncorrected error field (bit 61)
not set, a Model Specific Error Code (bits [31:16]) of 0x000F, and
an MCA Error Code (bits [15:0]) of 0x0005."
    
Block these spurious errors from the console and logs.
    
Links to Intel Specification updates:
    HSD131: https://www.intel.com/content/www/us/en/products/docs/processors/core/4th-gen-core-family-desktop-specification-update.html
    HSM142: https://www.intel.com/content/www/us/en/products/docs/processors/core/4th-gen-core-family-mobile-specification-update.html
    HSW131: https://www.intel.com/content/www/us/en/processors/xeon/xeon-e3-1200v3-spec-update.html
    BDM48: https://www.intel.com/content/www/us/en/products/docs/processors/core/5th-gen-core-family-spec-update.html

P.
Comment 1 Prarit Bhargava 2020-02-18 16:26:00 UTC
Created attachment 287461 [details]
4th gen core family mobile specificatoin update
Comment 2 Prarit Bhargava 2020-02-18 16:27:23 UTC
Created attachment 287463 [details]
$th gen core family desktop specification update
Comment 3 Prarit Bhargava 2020-02-18 16:27:56 UTC
Created attachment 287465 [details]
5th gen core family spec update
Comment 4 Prarit Bhargava 2020-02-18 16:28:42 UTC
Created attachment 287467 [details]
xeon e3 1200v3 spec update
Comment 5 Borislav Petkov 2022-01-06 23:26:32 UTC
Is this one still relevant or can we close?
Comment 6 Prarit Bhargava 2022-01-06 23:28:42 UTC
Yes, fixed in 2976908e4198 ("x86/mce: Do not log spurious corrected mce errors")

P.

Note You need to log in before you can comment on or make changes to this bug.